--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -260,6 +260,30 @@
 
 - type: entity
   parent: SquadBase
+  id: SquadFORECON
+  name: Reconnaissance
+  components:
+  - type: SquadTeam
+    color: "#32CD32"
+    blacklistedSquadArmor:
+    - Helmet
+    - Goggles
+    - Armor
+    radio: MarineForecon
+    minimapBackground:
+      sprite: _RMC14/Interface/map_blips.rsi
+      state: background_forecon
+    canSupplyDrop: false
+    group: FORECON
+  - type: Tag
+    tags:
+    - RMCSquadFORECON
+
+- type: Tag
+  id: RMCSquadFORECON
+
+- type: entity
+  parent: SquadBase
   id: SquadSOF
   name: SOF
   components:
