--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/squad_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/squad_leader.yml
@@ -65,4 +65,4 @@
   components:
   - type: SurvivorPreset
     primaryWeapons:
-    - [ WeaponShotgunM42A2, CMShellShotgunSlugs ]
+    - [ WeaponShotgunM42A2, RMCBoxShotgunSlugs ]
