--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/civilian_survivor.yml
@@ -17,6 +17,7 @@
   ranks:
     RMCRankCivilian: []
   startingGear: RMCGearSurvivor
+  dummyStartingGear: RMCGearSurvivorEquipped
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
   supervisors: cm-job-supervisors-nobody
@@ -54,6 +55,13 @@
     ears: CMHeadsetColony
     pocket1: RMCPouchSurvivalFill
     pocket2: RMCPouchGeneral
+
+- type: startingGear
+  parent: RMCGearSurvivor
+  id: RMCGearSurvivorEquipped
+  equipment:
+    jumpsuit: CMJumpsuitColonist
+    shoes: RMCShoesBlack
 
 - type: entity
   parent: CMSpawnPointJobBase
