uncomment out the hammer WL

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/breaching.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/breaching.yml
@@ -20,8 +20,8 @@
       collection: GenericHit
     wideAnimationRotation: 90
   - type: MeleeRequiresWield
-#  - type: WhitelistPickupBy
-#    whitelist:
-#     components:
-#     - Synth
+  - type: WhitelistPickupBy
+    whitelist:
+    components:
+     - Synth
 # TODO RMC14: This hammer needs to be ONLY picked up by Synths, It should be impossible for a regular person to pick it up. Ideally there should be an error message saying "This is too heavy for you to pick up!" or something like that.
