add pristine synth jumpsuit to synth 175h

--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -7,6 +7,15 @@
     jumpsuit: RMCJumpsuitSynthetic
 
 - type: loadout
+  id: CMJumpsuitSyntheticPristine
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: CMJobSynthetic
+      time: 630000 # 175 hrs
+
+- type: loadout
   id: ScrubsBlueRMC
   equipment:
     jumpsuit: CMScrubsBlue
