--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -12,7 +12,7 @@
   - !type:JobRequirementLoadoutEffect
     requirement:
       !type:RoleTimeRequirement
-      role: CMJobSynthetic
+      role: RMCJobSynthetic
       time: 630000 # 175 hrs
 
 - type: loadout
