--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -7,13 +7,15 @@
     jumpsuit: RMCJumpsuitSynthetic
 
 - type: loadout
-  id: CMJumpsuitSyntheticPristine
+  id: SynthJumpsuitPristineRMC
   effects:
   - !type:JobRequirementLoadoutEffect
     requirement:
-      !type:RoleTimeRequirement
-      role: RMCJobSynthetic
-      time: 630000 # 175 hrs
+     !type:RoleTimeRequirement
+    role: RMCJobSynthetic
+    time: 630000 # 175 hours
+  equipment:
+   jumpsuit: CMJumpsuitSyntheticPristine
 
 - type: loadout
   id: ScrubsBlueRMC
