--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
@@ -342,6 +342,7 @@
   minLimit: 1
   loadouts:
   - SynthUniformRMC
+  - SynthJumpsuitPristineRMC
   - ScrubsBlueRMC
   - ScrubsLightBlueRMC
   - ScrubsGreenRMC
