dont ever do no yaml when ur tired bro

--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -9,12 +9,13 @@
 - type: loadout
   id: SynthJumpsuitPristineRMC
   effects:
-  - !type:JobRequirementLoadoutEffect
-    requirement:
-      !type:RoleTimeRequirement
-      role: RMCJobSynthetic
-      time: 630000 # 175 hrs
-  equipment: CMJumpsuitSyntheticPristine
+    - !type:JobRequirementLoadoutEffect
+      requirement:
+        !type:RoleTimeRequirement
+        role: RMCJobSynthetic
+        time: 630000 # 175 hrs
+  equipment:
+    jumpsuit: CMJumpsuitSyntheticPristine
 
 - type: loadout
   id: ScrubsBlueRMC
