--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
@@ -105,6 +105,9 @@
   parent: RMCXenoCarrierBase
   id: CMXenoCarrier
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleCarrier
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Carrier/carrier.rsi
     layers:
@@ -160,6 +163,9 @@
   id: RMCXenoCarrierEggsac
   suffix: Eggsac
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleEggsac
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Carrier/eggsac_carrier.rsi
     layers:
