--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/mess_tech.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/mess_tech.yml
@@ -4,6 +4,10 @@
   name: cm-job-name-messtech
   description: cm-job-description-messtech
   playTimeTracker: CMJobMessTech
+  requirements:
+  - !type:DepartmentTimeRequirement
+    department: CMSquad
+    time: 7200 # 2 hours
   ranks:
     RMCRankLanceCorporal:
     - !type:RoleTimeRequirement
