--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -115,15 +115,15 @@
     ears: RMCHeadsetSynth
     belt: CMBeltUtilityFilled
 
-#- type: entity
-#  parent: CMSpawnPointJobBase
-#  id: RMCSpawnPointSynth
-#  name: synthetic spawn point
-#  components:
-#  - type: SpawnPoint
-#    job_id: RMCJobSynthetic
-#  - type: Sprite
-#    state: syn_spawn
+- type: entity
+  parent: CMSpawnPointJobBase
+  id: RMCSpawnPointSynth
+  name: synthetic spawn point
+  components:
+  - type: SpawnPoint
+    job_id: RMCJobSynthetic
+  - type: Sprite
+    state: syn_spawn
 
 - type: playTimeTracker
   id: RMCJobSynthetic
