--- a/Resources/Prototypes/_RMC14/Entities/Objects/Misc/bible.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Misc/bible.yml
@@ -43,6 +43,8 @@
     sprite: _RMC14/Objects/Misc/books.rsi
     state: tome_hefa
   - type: Storage
+    grid:
+    - 0,0,5,1 # 3 HEFA nades
     whitelist:
       tags:
       - RMCGrenadeHEFA
