--- a/Resources/Prototypes/_RMC14/Kitchen/Plants/produce.yml
+++ b/Resources/Prototypes/_RMC14/Kitchen/Plants/produce.yml
@@ -100,7 +100,7 @@
   name: grass
   parent: FoodProduceBase
   id: FoodGrass
-  description: "Grass"
+  description: "Grass."
   components:
   - type: SolutionContainerManager
     solutions:
