--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/sniper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/sniper.yml
@@ -35,7 +35,7 @@
       preset: RMCSurvivorPresetForeconNoPrimary
     - type: SniperWhitelist
     - type: JobPrefix
-      prefix: rmc-job-prefix-forecon
+      prefix: rmc-job-prefix-weapons-specialist-sniper
   hidden: true
 
 - type: startingGear
