--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/commander.yml
@@ -11,6 +11,7 @@
   roleWeight: 0.25
   icon: "RMCJobIconForeconCommander"
   hasIcon: true
+  spawnMenuRoleName: FORECON Commander (Survivor)
   special:
   - !type:AddComponentSpecial
     components:
