--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/marksman.yml
@@ -5,6 +5,7 @@
   playTimeTracker: RMCJobSurvivorMarksmanForecon
   startingGear: RMCGearForeconBase
   icon: "CMJobIconWeaponsSpecialist"
+  spawnMenuRoleName: FORECON Marksman (Survivor)
   special:
   - !type:AddComponentSpecial
     components:
