Fix fax responder factions, add CLF faction to CLF, change Survivor faction to Civilian faction. Also add FORECON radio to the high command headset.

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
@@ -13,6 +13,9 @@
   accessGroups:
   - RMCWeYaExecColony
   special:
+  - type: NpcFactionMember
+    factions:
+    - Bureau
   - !type:AddComponentSpecial
     components:
     - type: Skills
