--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/correspondent.yml
@@ -20,6 +20,10 @@
   special:
   - !type:AddComponentSpecial
     components:
+    - type: NpcFactionMember
+      factions:
+      - Civilian
+      - UNMC
     - type: RMCUserBulkyArmorIncapable
     - type: Skills
       skills:
