--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
@@ -30,7 +30,7 @@
     - type: MotionDetectorTracked
     - type: NpcFactionMember
       factions:
-      - Survivor
+      - Civilian
     - type: IntelRescueSurvivorObjective
     - type: RMCAllowSuitStorage
 
