--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
@@ -12,6 +12,9 @@
   special:
   - !type:AddComponentSpecial
     components:
+    - type: NpcFactionMember
+      factions:
+      - CLF
     - type: Skills
       skills:
         RMCSkillFirearms: 1
