add TSE faction to RCM SGO, fix issue in liaison yml

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/Royal/royal_smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/Royal/royal_smart_gun_operator.yml
@@ -15,6 +15,7 @@
     - type: NpcFactionMember
       factions:
       - RoyalMarines
+      - TSE
     - type: Skills
       skills:
         RMCSkillCqc: 2
