Fix linter fail

--- a/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
+++ b/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
@@ -9,7 +9,7 @@
   - UNMC
   - SPP
   - WeYa
-  - Survivor
+  - Civilian
   - CLF
 
 - type: npcFaction
@@ -19,7 +19,7 @@
   - RMCXeno
   - SPP
   - WeYa
-  - Survivor
+  - Civilian
   - CLF
 
 - type: npcFaction
