--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/hefa_sword.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/hefa_sword.yml
@@ -1,11 +1,6 @@
 ﻿- type: entity
-  parent: Claymore
+  parent: [ RMCBaseMeleeWeapon, CMM2132Machete ]
   id: RMCSwordHEFA
   name: HEFA sword
   description: A blade known to be used by the Order of the HEFA. # this highly dangerous blade blows up in a shower of shrapnel on impact. # TODO RMC14 HEFA sword explosion
   components:
-  - type: MeleeWeapon
-    attackRate: 1
-    damage:
-      types:
-        Slash: 35
