--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/knife.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/knife.yml
@@ -13,7 +13,7 @@
   parent: [ RMCBaseMeleeWeapon, BaseKnife, RMCAttachableBase ]
   id: RMCM5Bayonet # bayonet
   name: "M5 'Night Raider' bayonet"
-  description: The standard-issue bayonet of the Marines. You can slide this knife into your boots. # TODO RMC14 , or attach it to the end of a rifle.
+  description: The standard-issue bayonet of the Marines. You can slide this knife into your boots, or attach it to the end of a rifle.
   components:
   - type: Clothing
     slots:
@@ -124,7 +124,7 @@
   - type: DamageOtherOnHit
     damage:
       types:
-        Slash: 4
+        Slash: 10
   - type: UsableWhileDevoured
     damage:
       types:
@@ -158,6 +158,27 @@
   - type: Tag
     tags:
     - RMCCeremonialSword
+
+- type: entity
+  parent: CMM2132Machete
+  id: RMCM2100Machete
+  name: M2100 "Ngájhe" machete
+  description: An older issue UNMC machete, never left testing. Designed in the Central African Republic. The notching made it hard to clean, and as such the UNMC refused to adopt it - despite the superior bludgeoning power offered.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Melee/machete.rsi #TODO arnold machete sprite
+    state: icon
+  - type: Item
+    size: Large
+    sprite: _RMC14/Objects/Weapons/Melee/machete.rsi #TODO arnold machete sprite
+  - type: MeleeWeapon
+    damage:
+      types:
+        Slash: 55
+  - type: UsableWhileDevoured
+    damage:
+      types:
+        Slash: 22
 
 - type: Tag
   id: RMCCeremonialSword
