--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/medilathe.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   parent: BaseMachinePowered
   id: RMCMedilathe
   name: medilathe
@@ -129,10 +129,10 @@
   - CMSyringe
   - RMCDropper
   #    - RMC Spray bottle (500 plastic)
-  #    - Autoinjector (C-T) (300 Plastic)
-  #    - Autoinjector (C-S) (300 Plastic)
-  #    - Autoinjector (C-M) (300 Plastic)
-  #    - Autoinjector (C-L) (300 Plastic)
+  - RMCMedicAutoInjectorCustom5
+  - RMCMedicAutoInjectorCustom15
+  - RMCMedicAutoInjectorCustom30
+  - RMCMedicAutoInjectorCustom60
   - RMCMedicAutoInjectorEZ1
   - RMCMedicAutoInjectorEZ5
   - RMCMedicAutoInjectorEZ10
