Make sure flame tanks work fine

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
@@ -501,6 +501,8 @@
     - RMCAutoInjectorMedical
   - type: RMCEmptySolution
   - type: SolutionStorageFillable
+    solution: pen
+    
 
 - type: entity
   parent: RMCMedicAutoInjectorBase
