--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/katana.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/katana.yml
@@ -8,11 +8,11 @@
     tags:
     - Katana
   - type: Sprite
-    sprite: Objects/Weapons/Melee/katana.rsi #TODO cm13 katana sprite (Or our own custom sprite)
+    sprite: Objects/Weapons/Melee/katana.rsi #TODO cm13 katana sprite (Or our own sprites)
     state: icon
   - type: Item
     size: Large
-    sprite: Objects/Weapons/Melee/katana.rsi #TODO cm13 katana sprite (Or our own custom sprite)
+    sprite: Objects/Weapons/Melee/katana.rsi #TODO cm13 katana sprite (Or our own sprites)
   - type: MeleeWeapon
     damage:
       types:
@@ -26,15 +26,13 @@
   parent: RMCKatana
   id: RMCKatanaSharp
   name: absurdly sharp katana
-  description: <p>That's it. I'm sick of all this \"Masterwork Bastard Sword\" bullshit that's going on in CM-SS13 right now. Katanas deserve much better than that. Much, much better than that.</p>\
-   <p>I should know what I'm talking about. I myself commissioned a genuine katana in Japan for 2,400,000 Yen (that's about $20,000) and have been practicing with it for almost 2 years now. I can even cut slabs of solid steel with my katana.</p>\
-   <p>Japanese smiths spend years working on a single katana and fold it up to a million times to produce the finest blades known to mankind.</p>\
-   <p>Katanas are thrice as sharp as European swords and thrice as hard for that matter too. Anything a longsword can cut through, a katana can cut through better. I'm pretty sure a katana could easily bisect a knight wearing full plate with a simple vertical slash.</p>\
-   <p>Ever wonder why medieval Europe never bothered conquering Japan? That's right, they were too scared to fight the disciplined Samurai and their katanas of destruction. Even in World War II, American soldiers targeted the men with the katanas first because their killing power was feared and respected.</p>"
+  description: That's it. I'm sick of all this "Masterwork Bastard Sword" bullshit that's going on in RMC-14 right now. Katanas deserve much better than that. Much, much better than that.
+   I should know what I'm talking about. I myself commissioned a genuine katana in Japan for 2,400,000 Yen (that's about $20,000) and have been practicing with it for almost 2 years now. I can even cut slabs of solid steel with my katana.
+   Japanese smiths spend years working on a single katana and fold it up to a million times to produce the finest blades known to mankind.
+   Katanas are thrice as sharp as European swords and thrice as hard for that matter too. Anything a longsword can cut through, a katana can cut through better. I'm pretty sure a katana could easily bisect a knight wearing full plate with a simple vertical slash.
+   Ever wonder why medieval Europe never bothered conquering Japan? That's right, they were too scared to fight the disciplined Samurai and their katanas of destruction. Even in World War II, American soldiers targeted the men with the katanas first because their killing power was feared and respected.
   suffix: Admeme #TODO Kill delay, Katana dueling, Cuts 8 times(per swing?), and other stuff in 13's code.
   components:
-  - type: Item
-    size: Medium
   - type: MeleeWeapon
     damage:
       types:
