make television rotate

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/television.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/television.yml
@@ -6,6 +6,7 @@
   components:
   - type: Transform
     anchored: true
+    noRot: false
   - type: Sprite
     sprite: _RMC14/Structures/Machines/computer.rsi
     layers:
