--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/specialist.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/specialist.yml
@@ -43,7 +43,12 @@
         isAppendSquadRoleName: false
         givePrefix: rmc-job-prefix-weapons-specialist-scout
         isAppendPrefix: true
-        # maybe scout should come up with his own icons
+        giveIcon:
+          sprite: _RMC14/Interface/cm_job_icons.rsi
+          state: hudsquad_spec_scout
+        giveMapBlip:
+          sprite: _RMC14/Interface/map_blips.rsi
+          state: spec_scout
       - id: CMSniperEquipmentCase
         giveSquadRoleName: rmc-job-name-weapons-specialist-sniper
         isAppendSquadRoleName: false
