Base spec has AN icon, but it's just a cube the color of their squad.

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/weapons_specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/weapons_specialist.yml
@@ -20,7 +20,7 @@
     RMCRankLanceCorporal: []
   startingGear: CMGearWeaponsSpecialist
   dummyStartingGear: CMGearWeaponsSpecialistEquipped
-  icon: "CMJobIconWeaponsSpecialist"
+  icon: "CMJobIconEmpty"
   joinNotifyCrew: false
   supervisors: cm-job-supervisors-sl
   accessGroups:
