--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/rmc_reagent_canister.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/rmc_reagent_canister.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   parent: RMCPouchStorage
   id: RMCPouchReagentCanister
   name: pressurized reagent canister pouch
@@ -6,6 +6,12 @@
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Pouches/pressurized_reagent_canister.rsi
+    layers:
+    - state: icon
+    - state: closed
+      map: [ "openLayer" ]
+    - state: closed
+      map: [ "closedLayer" ]
   - type: Storage
     whitelist:
       tags:
@@ -26,10 +32,20 @@
           tags:
           - PressurizedCanister
         insertOnInteract: true
+  - type: ItemMapper
+    mapLayers:
+      loaded:
+        whitelist:
+          tags:
+          - PressurizedCanister
   - type: RMCStorageEjectHand
     state: Last
   - type: RMCRefillSolutionOnStore
   - type: RMCRefillSolutionFromContainerOnStore
+  - type: Appearance
+  - type: CMStorageVisualizer
+    storageClosed: closedLayer
+    storageOpen: openLayer
 
 - type: entity
   parent: RMCPouchReagentCanister
