--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/human_job_groups.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/human_job_groups.yml
@@ -70,3 +70,15 @@
     jobs:
     - CMPilotDropship
     - CMPilotGunship
+
+- type: entity
+  id: RMCJobsCorporate
+  categories:
+  - HideSpawnMenu
+  components:
+  - type: JobGroup
+    name: role-timer-corporate-roles
+    color: "#78ec0b"
+    jobs:
+    - CMLiaison
+    - CMSurvivorCorporate
