--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/rmc_reagent_canister.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/rmc_reagent_canister.yml
@@ -47,6 +47,7 @@
     state: Last
   - type: RMCRefillSolutionOnStore
   - type: RMCRefillSolutionFromContainerOnStore
+    canFlush: true
   - type: Appearance
   - type: CMStorageVisualizer
     storageClosed: closedLayer
