--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/hefa_sword.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/hefa_sword.yml
@@ -1,5 +1,5 @@
 ﻿- type: entity
-  parent: Claymore
+  parent: [Claymore, RMCBaseMeleeWeapon]
   id: RMCSwordHEFA
   name: HEFA sword
   description: A blade known to be used by the Order of the HEFA. # this highly dangerous blade blows up in a shower of shrapnel on impact. # TODO RMC14 HEFA sword explosion
